fix: corrections post-soutenance (coche, alignement, fonctionnement)

--- a/assets/sass/components/_plat.scss
+++ b/assets/sass/components/_plat.scss
@@ -60,7 +60,7 @@
     &__check {
         width: 0;
         min-width: 0;
-        height: 100%;
+        height: 100px;
         background-color: $vert;
         display: flex;
         justify-content: center;
@@ -83,6 +83,7 @@
 
     &:hover &__check {
         width: 60px;
+        height: 100px;
     }
 
     &:hover &__contenu {
