--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -44,6 +44,7 @@
             color: transparent;
             opacity: 0;
             transition: opacity 300ms;
+            pointer-events: none;
         }
 
         &:hover &-plein {
